Fix jump on gallery when opening model

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,3 +1,7 @@
 .hide-visibility {
     opacity: 0;
 }
+
+body {
+    margin: 0;
+}
